--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,500;0,600;0,700;0,800;1,300&family=Staatliches&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,500;0,600;0,700;0,800;1,300&family=Staatliches&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
 * {
   padding: 0px;
   margin: 0px;
@@ -205,205 +202,9 @@ p {
   }
 }
 
-* {
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-}
-
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-:focus,
-:active {
-  outline: none;
-}
-
-aside,
-nav,
-footer,
-header,
-section {
-  display: block;
-}
-
-html,
 body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  min-width: 320px;
-  position: relative;
-  width: 100%;
-  color: #0f0f0f;
-  font-size: 16px;
-}
-
-body {
-  font-size: 100%;
-  line-height: 140%;
-  background: #ffffff;
-  font-family: "Raleway", sans-serif;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-body.lock {
-  overflow: hidden;
-}
-
-@media (max-width: 767.98px) {
-  body.lock {
-    width: 100%;
-    position: fixed;
-    overflow: hidden;
-  }
-}
-
-input,
-button,
-textarea {
-  font-family: "Raleway", sans-serif;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 120%;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-button {
-  cursor: pointer;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-.button:hover,
-.button:active,
-.button:focus {
-  outline: transparent;
-}
-
-a {
-  cursor: pointer;
-}
-
-a,
-a:visited,
-a:focus,
-a:active,
-a:hover {
-  text-decoration: none;
-  outline: none;
-}
-
-ul li {
-  list-style: none;
-}
-
-img {
-  vertical-align: middle;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Raleway', sans-serif;
-  font-weight: inherit;
-  font-size: inherit;
-}
-
-.wrapper {
-  width: 100%;
-  min-height: 100%;
-  overflow: hidden;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-@media (max-width: 1212px) {
-  .container {
-    max-width: 970px;
-  }
-}
-
-@media (max-width: 992.98px) {
-  .container {
-    max-width: 750px;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .container {
-    max-width: none;
-    padding: 0 10px;
-  }
-}
-
-p {
-  line-height: 144%;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 300;
-  letter-spacing: 0.03rem;
-}
-
-@media all and (max-width: 767px) {
-  p {
-    line-height: 150%;
-  }
-}
-
-.title {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
-}
-
-.desktop {
-  display: block;
-}
-
-@media all and (max-width: 767px) {
-  .desktop {
-    display: none;
-  }
-}
-
-.mobile {
-  display: none;
-}
-
-@media all and (max-width: 767px) {
-  .mobile {
-    display: block;
-  }
+  height: 100vh;
+  background-color: wheat;
 }
 
 .header {
@@ -839,18 +640,6 @@ p {
   position: relative;
 }
 
-@media only screen and (max-width: 1179px) {
-  .header .menu-box {
-    padding: 14px 20px;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .header .menu-box {
-    padding: 9px 20px;
-  }
-}
-
 .header .menu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -869,7 +658,7 @@ p {
           box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
 }
 
-@media only screen and (max-width: 1179px) {
+@media all and (max-width: 1023px) {
   .header .menu li:hover {
     -webkit-box-shadow: none;
             box-shadow: none;
@@ -895,8 +684,6 @@ p {
   .header .menu li .submenu {
     -webkit-transition: 350ms all;
     transition: 350ms all;
-    -webkit-box-shadow: 2px 2px 10px #0B327D;
-            box-shadow: 2px 2px 10px #0B327D;
   }
   .header .menu li:hover > .submenu {
     -webkit-transform: translateY(0);
@@ -1210,754 +997,4 @@ p {
   background: #EC3737;
   height: 2000px;
 }
-
-.welcome {
-  position: relative;
-  margin-top: 5.2rem;
-  background: url("../img/home/img_banner_ship.jpg") center top/cover no-repeat;
-  height: 696px;
-  padding-top: 150px;
-}
-
-@media (min-width: 2000px) {
-  .welcome {
-    height: 900px;
-  }
-}
-
-@media (min-width: 1240px) and (max-width: 1700px) {
-  .welcome {
-    height: 600px;
-    padding-top: 120px;
-  }
-}
-
-@media all and (max-width: 1240px) {
-  .welcome {
-    height: 550px;
-    padding-top: 100px;
-  }
-}
-
-@media all and (max-width: 1023px) {
-  .welcome {
-    height: 418px;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .welcome {
-    height: auto;
-    background: none;
-    padding-top: 0;
-  }
-}
-
-.welcome__img-mobile {
-  display: none;
-}
-
-@media all and (max-width: 767px) {
-  .welcome__img-mobile {
-    display: block;
-    width: 100%;
-  }
-}
-
-.welcome__text-wrap {
-  background: rgba(10, 121, 145, 0.9);
-  padding: 67px 104px;
-  max-width: 680px;
-}
-
-@media all and (max-width: 1240px) {
-  .welcome__text-wrap {
-    padding: 47px 74px;
-  }
-}
-
-@media all and (max-width: 1023px) {
-  .welcome__text-wrap {
-    display: none;
-  }
-}
-
-.welcome__title {
-  font-family: "Montserrat", sans-serif;
-  font-size: 3rem;
-  font-weight: 800;
-  line-height: 100%;
-  color: #F0F8F7;
-  margin-bottom: 2rem;
-}
-
-.welcome__text {
-  font-size: 1.125rem;
-  font-weight: 500;
-  color: #F0F8F7;
-}
-
-.welcome__bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-}
-
-.welcome__socials {
-  position: absolute;
-  top: 35%;
-  right: 2%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-@media all and (max-width: 1240px) {
-  .welcome__socials {
-    top: 3%;
-  }
-}
-
-@media all and (max-width: 1023px) {
-  .welcome__socials {
-    display: none;
-  }
-}
-
-.welcome__social-link {
-  margin-bottom: 0.625rem;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-@media all and (max-width: 767px) {
-  .welcome__social-link {
-    margin-left: 0;
-    margin-bottom: 0.625rem;
-  }
-}
-
-.welcome__social-link:hover {
-  -webkit-transform: scale(1.08);
-          transform: scale(1.08);
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.welcome__soc-facebook::before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/facebook.svg");
-  background-size: 2rem 2rem;
-  height: 2rem;
-  width: 2rem;
-}
-
-.welcome__soc-twitter::before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/twitter.svg");
-  background-size: 2rem 2rem;
-  height: 2rem;
-  width: 2rem;
-}
-
-.welcome__soc-youtube::before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/youtube.svg");
-  background-size: 2rem 2rem;
-  height: 2rem;
-  width: 2rem;
-}
-
-.welcome__soc-inst::before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/instagram.svg");
-  background-size: 2rem 2rem;
-  height: 2rem;
-  width: 2rem;
-}
-
-.welcome__soc-google-plus::before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/g-plus.svg");
-  background-size: 2rem 2rem;
-  height: 2rem;
-  width: 2rem;
-}
-
-.about-us {
-  position: relative;
-  padding: 11rem 0 7rem;
-  background: #0A7990;
-  height: auto;
-}
-
-@media all and (max-width: 1023px) {
-  .about-us {
-    padding: 15rem 0 3rem;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .about-us {
-    padding: 15rem 0 3rem;
-    z-index: 0;
-  }
-}
-
-.about-us__title {
-  font-size: 2.5rem;
-  font-weight: 700;
-  font-family: "Montserrat", sans-serif;
-  color: #F0F8F7;
-  margin-bottom: 2rem;
-}
-
-@media all and (max-width: 1023px) {
-  .about-us__title {
-    font-size: 2rem;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .about-us__title {
-    font-size: 1.2rem;
-    margin-bottom: 1rem;
-  }
-}
-
-.about-us__text {
-  color: #ffffff;
-  font-size: 1.125rem;
-  line-height: 140%;
-  max-width: 30rem;
-}
-
-@media (min-width: 2000px) {
-  .about-us__text {
-    max-width: 50rem;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .about-us__text {
-    font-size: 0.875rem;
-    z-index: 2;
-    line-height: 190%;
-  }
-}
-
-.about-us__img {
-  position: absolute;
-  right: 0;
-  bottom: -3.75rem;
-}
-
-@media (min-width: 2000px) {
-  .about-us__img {
-    right: 8%;
-    bottom: -8.75rem;
-    width: 30%;
-  }
-}
-
-@media all and (max-width: 1699px) {
-  .about-us__img {
-    width: 55%;
-  }
-}
-
-@media all and (max-width: 1240px) {
-  .about-us__img {
-    width: 60%;
-    bottom: -1.75rem;
-    right: -15%;
-  }
-}
-
-@media all and (max-width: 1023px) {
-  .about-us__img {
-    width: 70%;
-    bottom: 2rem;
-    right: -35%;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .about-us__img {
-    z-index: -1;
-    width: 100%;
-    bottom: -1.5rem;
-    right: -30%;
-    opacity: 0.6;
-    display: none;
-  }
-}
-
-.about-us__row {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-column-gap: 20px;
-  margin-bottom: 7rem;
-  margin-top: -17.5rem;
-}
-
-@media all and (max-width: 1023px) {
-  .about-us__row {
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-    margin-bottom: 4rem;
-    grid-gap: 20px;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .about-us__row {
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-    margin-bottom: 2.5rem;
-    grid-gap: 10px;
-    margin-top: -18.5rem;
-  }
-}
-
-.about-us__box {
-  background: #F0F8F7;
-  padding: 1.2rem 3rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-@media all and (max-width: 1240px) {
-  .about-us__box {
-    padding: 1.2rem 1rem;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .about-us__box {
-    padding: 0.5rem;
-  }
-}
-
-.about-us__box:hover {
-  -webkit-transform: scale(1.03);
-          transform: scale(1.03);
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.about-us__sub-title {
-  font-size: 1.125rem;
-  font-weight: bold;
-  color: #095F71;
-  text-align: center;
-}
-
-@media all and (max-width: 767px) {
-  .about-us__sub-title {
-    font-size: 0.8rem;
-    line-height: 120%;
-  }
-}
-
-.about-us__link {
-  color: #F96B30;
-  font-size: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-@media all and (max-width: 767px) {
-  .about-us__link {
-    font-size: 0.7rem;
-    line-height: 120%;
-  }
-}
-
-.about-us__link:hover {
-  text-decoration: underline;
-}
-
-.about-us__link::after {
-  display: block;
-  content: ' ';
-  background-image: url("../img/home/chevron-right.svg");
-  background-size: 1.0625rem 0.8125rem;
-  height: 0.8125rem;
-  width: 1.0625rem;
-  margin-left: 0.5rem;
-}
-
-.about-us__icon {
-  margin: 1rem 0 1.5rem;
-}
-
-@media all and (max-width: 767px) {
-  .about-us__icon {
-    margin: 0.2rem 0;
-  }
-}
-
-.our-service {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #F0F8F7), color-stop(30%, #0A7990));
-  background: linear-gradient(to bottom, #F0F8F7 70%, #0A7990 30%);
-  height: auto;
-  padding: 7.5rem 0 6rem;
-}
-
-@media all and (max-width: 1023px) {
-  .our-service {
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(80%, #F0F8F7), color-stop(20%, #0A7990));
-    background: linear-gradient(to bottom, #F0F8F7 80%, #0A7990 20%);
-    padding: 3rem 0;
-  }
-}
-
-@media all and (max-width: 1023px) {
-  .our-service {
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(80%, #F0F8F7), color-stop(20%, #0A7990));
-    background: linear-gradient(to bottom, #F0F8F7 80%, #0A7990 20%);
-    padding: 2rem 0;
-  }
-}
-
-.our-service__title {
-  font-size: 2.5rem;
-  font-weight: 700;
-  font-family: "Montserrat", sans-serif;
-  color: #0A7990;
-  margin-bottom: 3.2rem;
-}
-
-@media all and (max-width: 1023px) {
-  .our-service__title {
-    font-size: 2rem;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .our-service__title {
-    font-size: 1.2rem;
-    margin-bottom: 2rem;
-  }
-}
-
-.our-service__row {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(197px, auto);
-  grid-gap: 20px;
-}
-
-@media all and (max-width: 1023px) {
-  .our-service__row {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: minmax(114px, auto);
-    grid-gap: 1rem;
-  }
-}
-
-.our-service__box {
-  background: #F0F8F7;
-  padding: 1.2rem 3rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-          box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.25);
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-@media all and (max-width: 1023px) {
-  .our-service__box {
-    padding: 1.2rem 2rem;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .our-service__box {
-    padding: 0.4rem;
-  }
-}
-
-.our-service__box:hover {
-  -webkit-transform: scale(1.03);
-          transform: scale(1.03);
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.our-service__sub-title {
-  font-size: 1.425rem;
-  font-weight: bold;
-  color: #095F71;
-}
-
-@media all and (max-width: 1023px) {
-  .our-service__sub-title {
-    font-size: 1rem;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .our-service__sub-title {
-    font-size: 0.8rem;
-    line-height: 120%;
-  }
-}
-
-.our-service__link {
-  color: #F96B30;
-  font-size: 1.125rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-@media all and (max-width: 1023px) {
-  .our-service__link {
-    font-size: 0.8rem;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .our-service__link {
-    font-size: 0.7rem;
-    line-height: 120%;
-  }
-}
-
-.geography {
-  padding: 3.2rem 0 5rem;
-  background: #F0F8F7;
-}
-
-@media all and (max-width: 1023px) {
-  .geography {
-    padding: 3rem 0 3rem;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .geography {
-    background: url("../img/home/mobile/map_bg.png") center top/cover no-repeat;
-  }
-}
-
-.geography__title {
-  font-size: 2.5rem;
-  font-weight: 700;
-  font-family: "Montserrat", sans-serif;
-  color: #0A7990;
-  margin-bottom: 2.5rem;
-}
-
-@media all and (max-width: 1023px) {
-  .geography__title {
-    font-size: 2rem;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .geography__title {
-    font-size: 1.2rem;
-  }
-}
-
-.geography__sub-title {
-  font-size: 1.125rem;
-  font-weight: 800;
-  color: #F96B30;
-  margin-bottom: 0.6rem;
-}
-
-@media all and (max-width: 767px) {
-  .geography__sub-title {
-    font-size: 1rem;
-    margin-bottom: 0.4rem;
-  }
-}
-
-.geography__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 0 6rem;
-}
-
-@media all and (max-width: 1240px) {
-  .geography__row {
-    padding: 0;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .geography__row {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-
-.geography__box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-right: 6rem;
-}
-
-.geography__box:last-child {
-  margin-right: 0;
-}
-
-@media all and (max-width: 1240px) {
-  .geography__box {
-    margin-right: 0;
-  }
-}
-
-@media all and (max-width: 1023px) {
-  .geography__box {
-    margin-right: 1rem;
-  }
-}
-
-@media all and (max-width: 1023px) {
-  .geography__box {
-    margin-right: 0;
-    margin-bottom: 2rem;
-  }
-}
-
-.geography__list-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  border-top: 1px solid #F96B30;
-}
-
-.geography__list {
-  padding-top: 0.6rem;
-  margin-right: 1.25rem;
-}
-
-@media all and (max-width: 1023px) {
-  .geography__list {
-    margin-right: 1rem;
-  }
-}
-
-.geography__link {
-  font-size: 0.75rem;
-  font-weight: 700;
-  color: #095F71;
-  text-decoration: underline;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.geography__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.geography__item::before {
-  display: block;
-  content: ' ';
-  background-image: url("../img/home/rhombus.svg");
-  background-size: 5px 5px;
-  height: 5px;
-  width: 5px;
-  margin-right: 0.2rem;
-}
-
-.geography__img {
-  margin: 4.5rem 6rem 0;
-}
-
-@media all and (max-width: 1240px) {
-  .geography__img {
-    padding: 0;
-    margin: 4.5rem 0 0;
-  }
-}
-
-@media all and (max-width: 1023px) {
-  .geography__img {
-    width: 100%;
-    margin: 2.5rem 0 0;
-  }
-}
-
-@media all and (max-width: 767px) {
-  .geography__img {
-    display: none;
-  }
-}
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=header.css.map */
