--- a/css/style.css
+++ b/css/style.css
@@ -1,210 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,500;0,600;0,700;0,800;1,300&family=Staatliches&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,500;0,600;0,700;0,800;1,300&family=Staatliches&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
-* {
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-}
-
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-:focus,
-:active {
-  outline: none;
-}
-
-aside,
-nav,
-footer,
-header,
-section {
-  display: block;
-}
-
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  min-width: 320px;
-  position: relative;
-  width: 100%;
-  color: #0f0f0f;
-  font-size: 16px;
-}
-
-body {
-  font-size: 100%;
-  line-height: 140%;
-  background: #ffffff;
-  font-family: "Raleway", sans-serif;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-body.lock {
-  overflow: hidden;
-}
-
-@media (max-width: 767.98px) {
-  body.lock {
-    width: 100%;
-    position: fixed;
-    overflow: hidden;
-  }
-}
-
-input,
-button,
-textarea {
-  font-family: "Raleway", sans-serif;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 120%;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-button {
-  cursor: pointer;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-.button:hover,
-.button:active,
-.button:focus {
-  outline: transparent;
-}
-
-a {
-  cursor: pointer;
-}
-
-a,
-a:visited,
-a:focus,
-a:active,
-a:hover {
-  text-decoration: none;
-  outline: none;
-}
-
-ul li {
-  list-style: none;
-}
-
-img {
-  vertical-align: middle;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Raleway', sans-serif;
-  font-weight: inherit;
-  font-size: inherit;
-}
-
-.wrapper {
-  width: 100%;
-  min-height: 100%;
-  overflow: hidden;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-@media (max-width: 1212px) {
-  .container {
-    max-width: 970px;
-  }
-}
-
-@media (max-width: 992.98px) {
-  .container {
-    max-width: 750px;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .container {
-    max-width: none;
-    padding: 0 10px;
-  }
-}
-
-p {
-  line-height: 144%;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 300;
-  letter-spacing: 0.03rem;
-}
-
-@media all and (max-width: 767px) {
-  p {
-    line-height: 150%;
-  }
-}
-
-.title {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
-}
-
-.desktop {
-  display: block;
-}
-
-@media all and (max-width: 767px) {
-  .desktop {
-    display: none;
-  }
-}
-
-.mobile {
-  display: none;
-}
-
-@media all and (max-width: 767px) {
-  .mobile {
-    display: block;
-  }
-}
-
 * {
   padding: 0px;
   margin: 0px;
@@ -1203,12 +999,8 @@ p {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin-top: 2rem;
   }
-}
-
-.demo {
-  background: #EC3737;
-  height: 2000px;
 }
 
 .welcome {
