--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,7 +5,7 @@
 // Файл обнуленных стилей
 @import "_nullstyles";
 @import "_header";
-
+@import "_footer";
 .welcome {
 	position: relative;
 	margin-top: 5.2rem;
